# cookiecutter-python

./: .coverage  README.md  cookiecutter.json
hooks/: post_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .bumpversion.cfg  .gitignore  CHANGELOG.md  README.md  setup.cfg  setup.py  tox.ini
{{cookiecutter.project_slug}}/.github/workflows/: publish.yml
{{cookiecutter.project_slug}}/docs/: conf.py  index.rst
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.pkg_name}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.pkg_name}}/: __init__.py  api.py  cli.py
