[metadata]
name = {{ cookiecutter.pkg_name }}
version = {{ cookiecutter.version }}
author = {{ cookiecutter.full_name }}
description = {{cookiecutter.description}}

[options]
packages =
    {{ cookiecutter.pkg_name }}

install_requires =
    {% if cookiecutter.command_line_interface|lower == 'click' -%}
    click
    {%- endif %}
    {% if cookiecutter.command_line_interface|lower == 'typer' -%}
    typer
    {%- endif %}
    {% if cookiecutter.api|lower == 'fastapi' -%}
    fastapi
    pydantic
    uvicorn
    {%- endif %}

{% if cookiecutter.command_line_interface|lower != 'none' -%}
[options.entry_points]
console_scripts =
    {{ cookiecutter.project_slug }} = {{ cookiecutter.pkg_name }}.cli:main

{% endif %}
[bdist_wheel]
universal = true

[options.package_data]
* = **/*.html, **/*.md
