[metadata]
name = {{ cookiecutter.pkg_name }}
version = {{ cookiecutter.version }}
author = {{ cookiecutter.full_name }}
description = {{cookiecutter.description}}
long_description = file: README.md
long_description_content_type=text/markdown
url = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python

[options]
packages =
    {{ cookiecutter.pkg_name }}

{% if cookiecutter.cli|lower == 'y' -%}
[options.entry_points]
console_scripts =
    {{ cookiecutter.project_slug }} = {{ cookiecutter.pkg_name }}.cli:main

{% endif %}
[bdist_wheel]
universal = true

[options.package_data]
* = **/*.html, **/*.md
